--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -7,7 +7,7 @@
 .cb-enable.selected { background-position: 0 -60px; }
 .cb-enable.selected span { background-position: left -150px; color: #fff; }
 .switch label { cursor: pointer; }
-.switch input { display: none; }
+.switch input { display: none !important; }
 
 
 .s-input {width: 60px;}
